Support DHCPv6 and IPv6 router advertisements in addition to DHCPv4.
This was done by extending nrad6 so that it supports DHCPv4.

That history can be seen in the nrad6 repository, which will now
effectively be dead.

ndhs is no longer programmable in Lua and no longer stores dynamic
leases in a SQLite database.  Instead it uses a custom declarative
configuration file format and stores dynamic leases in an easily
parsed flat text file.

The old version of ndhs still exists in a 'legacy' branch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ project (ndhs)
 
 cmake_minimum_required (VERSION 2.6)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s -std=gnu99 -ldl -pedantic -Wall -Wextra -Wformat=2 -Wformat-security -Wpointer-arith -Wno-unused-parameter -DNDHS_BUILD")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s -std=gnu++14 -ldl -pedantic -Wall -Wextra -Wformat=2 -Wformat-security -Wpointer-arith -Wno-unused-parameter -DNDHS_BUILD")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -std=gnu99 -pedantic -Wall -Wextra -Wformat=2 -Wformat-nonliteral -Wformat-security -Wpointer-arith -Wno-unused-parameter -DNDHS_BUILD")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=gnu++14 -pedantic -Wall -Wextra -Wformat=2 -Wformat-nonliteral -Wformat-security -Wpointer-arith -Wno-unused-parameter -DNDHS_BUILD")
 
 if (WIN32)
   set(OSNAME "Win32")
@@ -15,9 +15,19 @@ execute_process(
   OUTPUT_VARIABLE OSNAME
   )
 endif()
+#message("OSNAME: '${OSNAME}'")
 
 if (${OSNAME} STREQUAL "Linux")
   message("Detected that the current host is a Linux system.")
+  execute_process(
+    COMMAND uname -r
+    COMMAND tr "\n" " "
+    COMMAND sed "s/ //"
+    OUTPUT_VARIABLE LINUX_VERSION
+    )
+else()
+  message("ndhs requires a Linux host system.")
+  return()
 endif()
 
 include_directories("${PROJECT_SOURCE_DIR}"
@@ -31,15 +41,31 @@ link_directories ( ${Boost_LIBRARY_DIRS} )
 include_directories ( ${Boost_INCLUDE_DIRS} )
 find_package(Threads)
 
-file(GLOB LUA_SRCS "lua/*.c")
-add_library(lua ${LUA_SRCS})
+set(RAGEL_CFG ${CMAKE_CURRENT_BINARY_DIR}/cfg.cpp)
+set(RAGEL_DYNLEASE ${CMAKE_CURRENT_BINARY_DIR}/dynlease.cpp)
 
-subdirs(sqlite)
+find_program(RAGEL ragel)
+add_custom_command(
+  OUTPUT ${RAGEL_CFG}
+  COMMAND ${RAGEL} -G2 -o ${RAGEL_CFG} cfg.rl
+  DEPENDS cfg.rl
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMENT "Compiling Ragel state machine: cfg.rl"
+  VERBATIM
+  )
+add_custom_command(
+  OUTPUT ${RAGEL_DYNLEASE}
+  COMMAND ${RAGEL} -G2 -o ${RAGEL_DYNLEASE} dynlease.rl
+  DEPENDS dynlease.rl
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMENT "Compiling Ragel state machine: dynlease.rl"
+  VERBATIM
+  )
 
 file(GLOB NDHS_SRCS_C "*.c")
 file(GLOB NDHS_SRCS_CPP "*.cpp")
 list(APPEND NDHS_SRCS ${NDHS_SRCS_C} ${NDHS_SRCS_CPP})
 
-add_executable(ndhs ${NDHS_SRCS})
-target_link_libraries(ndhs ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES}
-                           ncmlib cppformat lua sqlite)
+add_executable(ndhs ${RAGEL_CFG} ${RAGEL_DYNLEASE} ${NDHS_SRCS})
+target_link_libraries(ndhs ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ncmlib cppformat)
+
