Silence unused variable warnings in Ragel-generated code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,10 @@ add_custom_command(
   COMMENT "Compiling Ragel state machine: cfg.rl"
   VERBATIM
   )
+set_property(SOURCE ${RAGEL_CFG} APPEND PROPERTY GENERATED TRUE)
+if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  set_property(SOURCE ${RAGEL_CFG} APPEND_STRING PROPERTY COMPILE_FLAGS " -Wno-unused-const-variable")
+endif()
 add_custom_command(
   OUTPUT ${RAGEL_DYNLEASE}
   COMMAND ${RAGEL} -G2 -o ${RAGEL_DYNLEASE} dynlease.rl
@@ -60,6 +64,10 @@ add_custom_command(
   COMMENT "Compiling Ragel state machine: dynlease.rl"
   VERBATIM
   )
+set_property(SOURCE ${RAGEL_DYNLEASE} APPEND PROPERTY GENERATED TRUE)
+if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  set_property(SOURCE ${RAGEL_DYNLEASE} APPEND_STRING PROPERTY COMPILE_FLAGS " -Wno-unused-const-variable")
+endif()
 
 add_executable(ndhs ${RAGEL_CFG} ${RAGEL_DYNLEASE})
 target_sources(ndhs PRIVATE
