--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ endif()
 
 add_executable(ndhs ${RAGEL_CFG} ${RAGEL_DYNLEASE})
 target_sources(ndhs PRIVATE
+  "rng.cpp"
   "attach_bpf.c"
   "dhcp6.cpp"
   "duid.cpp"
